syntax = "proto2";

package uk.gov.homeoffice.drt.protobuf.messages.config;


message RemoveUpdateMessage {
    optional int64 effectiveFrom = 1;
}
